--- a/Kaggle_API_with_Colab.ipynb
+++ b/Kaggle_API_with_Colab.ipynb
@@ -38,6 +38,17 @@
     },
     {
       "metadata": {
+        "id": "cspHXsRF1czQ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### https://www.kaggle.com/getting-started/47096\n",
+        "### https://medium.com/deep-learning-turkey/google-colab-free-gpu-tutorial-e113627b9f5d"
+      ]
+    },
+    {
+      "metadata": {
         "id": "YMvFLpBQlBTR",
         "colab_type": "code",
         "colab": {}
