--- a/Cat_Dog_Detection_Keras_ResNet50.ipynb
+++ b/Cat_Dog_Detection_Keras_ResNet50.ipynb
@@ -38742,7 +38742,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 785
         },
         "outputId": "f3896ffb-a752-4b14-f7e8-94ccd1af91c7"
       },
@@ -38755,7 +38755,7 @@
         "                        validation_steps = valid_batches.samples // BATCH_SIZE,\n",
         "                        epochs = EPOCHS)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -38764,11 +38764,102 @@
             "Instructions for updating:\n",
             "Use tf.cast instead.\n",
             "Epoch 1/20\n",
-            " 859/5750 [===>..........................] - ETA: 5:47 - loss: 0.5958 - acc: 0.8102"
+            "5750/5750 [==============================] - 402s 70ms/step - loss: 0.3427 - acc: 0.9035 - val_loss: 0.0846 - val_acc: 0.9780\n",
+            "Epoch 2/20\n",
+            "5750/5750 [==============================] - 391s 68ms/step - loss: 0.2115 - acc: 0.9417 - val_loss: 0.0770 - val_acc: 0.9825\n",
+            "Epoch 3/20\n",
+            "5750/5750 [==============================] - 387s 67ms/step - loss: 0.1579 - acc: 0.9542 - val_loss: 0.0894 - val_acc: 0.9805\n",
+            "Epoch 4/20\n",
+            "5750/5750 [==============================] - 389s 68ms/step - loss: 0.1193 - acc: 0.9639 - val_loss: 0.0809 - val_acc: 0.9810\n",
+            "Epoch 5/20\n",
+            "5750/5750 [==============================] - 387s 67ms/step - loss: 0.1086 - acc: 0.9674 - val_loss: 0.0788 - val_acc: 0.9825\n",
+            "Epoch 6/20\n",
+            "5750/5750 [==============================] - 385s 67ms/step - loss: 0.0962 - acc: 0.9701 - val_loss: 0.0826 - val_acc: 0.9825\n",
+            "Epoch 7/20\n",
+            "5750/5750 [==============================] - 384s 67ms/step - loss: 0.0850 - acc: 0.9726 - val_loss: 0.0938 - val_acc: 0.9810\n",
+            "Epoch 8/20\n",
+            "5750/5750 [==============================] - 381s 66ms/step - loss: 0.0782 - acc: 0.9756 - val_loss: 0.0869 - val_acc: 0.9825\n",
+            "Epoch 9/20\n",
+            "5750/5750 [==============================] - 379s 66ms/step - loss: 0.0702 - acc: 0.9785 - val_loss: 0.0947 - val_acc: 0.9800\n",
+            "Epoch 10/20\n",
+            "5750/5750 [==============================] - 381s 66ms/step - loss: 0.0650 - acc: 0.9801 - val_loss: 0.0913 - val_acc: 0.9810\n",
+            "Epoch 11/20\n",
+            "5750/5750 [==============================] - 379s 66ms/step - loss: 0.0605 - acc: 0.9800 - val_loss: 0.0809 - val_acc: 0.9830\n",
+            "Epoch 12/20\n",
+            "5750/5750 [==============================] - 381s 66ms/step - loss: 0.0597 - acc: 0.9806 - val_loss: 0.0873 - val_acc: 0.9815\n",
+            "Epoch 13/20\n",
+            "5750/5750 [==============================] - 383s 67ms/step - loss: 0.0580 - acc: 0.9823 - val_loss: 0.0888 - val_acc: 0.9835\n",
+            "Epoch 14/20\n",
+            "5750/5750 [==============================] - 384s 67ms/step - loss: 0.0443 - acc: 0.9857 - val_loss: 0.0920 - val_acc: 0.9830\n",
+            "Epoch 15/20\n",
+            "5750/5750 [==============================] - 381s 66ms/step - loss: 0.0500 - acc: 0.9850 - val_loss: 0.0976 - val_acc: 0.9800\n",
+            "Epoch 16/20\n",
+            "5750/5750 [==============================] - 383s 67ms/step - loss: 0.0469 - acc: 0.9847 - val_loss: 0.1019 - val_acc: 0.9810\n",
+            "Epoch 17/20\n",
+            "5750/5750 [==============================] - 383s 67ms/step - loss: 0.0481 - acc: 0.9849 - val_loss: 0.1029 - val_acc: 0.9830\n",
+            "Epoch 18/20\n",
+            "5750/5750 [==============================] - 379s 66ms/step - loss: 0.0435 - acc: 0.9868 - val_loss: 0.1008 - val_acc: 0.9820\n",
+            "Epoch 19/20\n",
+            "5750/5750 [==============================] - 377s 66ms/step - loss: 0.0407 - acc: 0.9870 - val_loss: 0.1043 - val_acc: 0.9810\n",
+            "Epoch 20/20\n",
+            "5750/5750 [==============================] - 378s 66ms/step - loss: 0.0401 - acc: 0.9874 - val_loss: 0.1069 - val_acc: 0.9815\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fc8bda9a438>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "bUMJ2RCf3LYV",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**`model.save(filepath)` to save a Keras model into a single HDF5 file which will contain:**\n",
+        "* the architecture of the model, allowing to re-create the model\n",
+        "* the weights of the model\n",
+        "* the training configuration (loss, optimizer)\n",
+        "* the state of the optimizer, allowing to resume training exactly where you left off."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Co175ivUYWVQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# save trained weights\n",
+        "net_final.save(WEIGHTS_FINAL)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "PCLMIQAh9q0p",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -38781,21 +38872,10 @@
         "\n",
         "https://github.com/jkjung-avt/keras-cats-dogs-tutorial\n",
         "\n",
-        "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html"
+        "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html\n",
+        "\n",
+        "https://keras.io/getting-started/faq/"
       ]
-    },
-    {
-      "metadata": {
-        "id": "Co175ivUYWVQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
